retailer_dashboard.css
/* ... */
@media (prefers-color-scheme: dark) {
  body {
    --bene-red: #ba3027;
    /* --bene-lightblue: #1a1a1a; */
    --bene-lightblue: #050505;
    --bene-blue: #92c5e8;
    --bene-base-medium: #7a7a7a;
    --bene-base-high: rgb(255, 255, 255);
    --bene-chrome-low: #000000;
    --bene-chrome-medium: #242424;
    --bene-chrome-medium-high: #1b1b1b;
    /* --bene-alt-high: #000; */
    --bene-alt-high: rgb(10, 10, 10);
    --bene-acrylic: rgba(0, 0, 0, 0.6);
    --bene-nav-color: rgba(146, 197, 232, 0.1);
    --bene-small-shadow: rgba(0, 0, 0, 0.5);
    --bene-medium-shadow: rgba(15, 15, 15, 0.2);
    --bene-medium-hover-shadow: rgba(15,15,15,0.7);
  }

  .navbar > img {
    content: url("Assets/ACT\ NOW\ -\ Benefactory\ \(Dark\ Mode\).png");
  }

  .header_title {
    content: url("Assets/home_header_dark.svg");
  }
}

:root {
  --bene-red: #ba3027;
  --bene-lightblue: #edf3f8;
  --bene-blue: #92c5e8;
  --bene-base-medium: #7a7a7a;
  --bene-base-high: #000;
  /* --bene-chrome-low: #f9f9f9; */
  --bene-chrome-low: #fff;
  --bene-chrome-medium: #f5f5f5;
  --bene-chrome-medium-high: #f1f1f1;
  --bene-alt-high: #fff;
  --bene-acrylic: rgba(255, 255, 255, 0.8);
  --bene-nav-color: #fff;
  --bene-small-shadow: rgba(0, 0, 0, 0.04);
  --bene-medium-shadow: rgba(0, 0, 0, 0.05);
  --bene-medium-hover-shadow: rgba(0,0,0,0.1);
}

a {
  text-decoration: none;
}

.bene-body-base-medium {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: var(--bene-base-medium);
}

.bene-body-base-small {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 14px;
  line-height: 20px;
  color: var(--bene-base-medium);
}

.navbar img {
  padding: 30px;
}

.navbar {
  height: 100vh;
  width: 300;
  position: fixed;
  z-index: 20;
  top: 0;
  left: 0;
  background-color: var(--bene-lightblue);
  overflow-x: hidden;
  transition: 0.3s ease-out;
}

.navbar a {
  padding: 20px 15px;
  margin: 10px 20px;
  text-decoration: none;
  font-size: 15px;
  font-weight: 500;
  color: var(--bene-base-medium);
  display: block;
  transition: 0.3s;
  border-radius: 5px;
  text-decoration: none;
}

#ared {
  color: #ba3027;
}

.navbar a:hover {
  color: var(--bene-base-high);
  cursor: pointer;
}

.navbarselected {
  padding: 20px 15px;
  margin: 10px 20px;
  text-decoration: none;
  font-size: 15px;
  font-weight: 600 !important;
  color: var(--bene-base-high) !important;
  display: block;
  transition: 0.3s;
  background-color: var(--bene-nav-color);
  border-radius: 5px;
  text-decoration: none;
  /* filter: drop-shadow(0px 15px 30px rgba(0, 0, 0, 0.05)); */
  filter: drop-shadow(0px 15px 30px rgba(146, 197, 232, 0.1));
}

.navfooter {
  display: block;
  margin-top: 40px;
  /* border-top: rgba(146, 197, 232, 0.2) solid 1px; */
}

.workspace {
  animation: fadein 300ms;
  margin-left: 300px;
}

.ham_menu {
  display: none;
  margin-bottom: 5px;
}

.ham_menu:hover {
  cursor: pointer;
}

.header_title {
}

.header {
  position: fixed;
  width: 100%;
  height: 100px;
  background-color: var(--bene-acrylic);
  -webkit-backdrop-filter: blur(20px);
  backdrop-filter: blur(20px);
  z-index: 10;
  /* filter: drop-shadow(0px 15px 30px rgba(0, 0, 0, 0.03)); */
}

.header img {
  margin-left: 20px;
  margin-top: 50px;
}

.bene-light-header {
  font-weight: 300;
  font-size: 32px;
  color: var(--bene-base-high);
}

.workspacecontent {
  display: grid;
  padding: 150px 50px;
  grid-gap: 5px;
}

.campaignstable {
  max-width: 700px;
}

.bene-caps-small {
  letter-spacing: 0.5px;
  font-size: 13px;
  color: var(--bene-base-medium);
  line-height: 26px;
}

.bene-body-title {
  font-size: 17px;
  color: var(--bene-base-high);
  line-height: 30px;
  font-weight: 500;
}

.bene-body-subtitle {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: var(--bene-base-high);
  line-height: 24px;
  font-weight: 400;
}

.campaignstablehead {
  display: grid;
  grid-template-columns: 5fr 3fr 2fr;
  margin-top: 50px;
  font-size: 12px;
  margin-left: 20px;
  color: var(--bene-base-medium);
}

.campaignstablecard {
  background-color: #fff;
  filter: drop-shadow(0px 15px 30px rgba(0, 0, 0, 0.05));
  margin-top: 30px;
  display: grid;
  grid-template-columns: 5fr 3fr 2fr;
  border-radius: 5px;
  font-weight: 500;
  font-size: 15px;
}

.campaignstablecard > div {
  padding: 24px 20px;
}

.tablecardaction {
  background-color: var(--bene-chrome-medium);
  text-align: center;
  color: var(--bene-base-medium);
  font-size: 15px;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  min-width: 100px;
}

.tablecardaction a {
  text-decoration: none;
  color: var(--bene-base-medium);
}

.tablecardaction a:hover {
  /* text-decoration: underline; */
  cursor: pointer;
}

.campaign-upload-image {
  background-image: url("Assets/placeholder-image.jpg");
  height: 200px;
  width: 300px;
  background-size: cover;
  border-radius: 5px;
  /* filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.1)); */
  margin-top: 5px;
  background-position: center;
  background-repeat: no-repeat;
}

.campaign-upload-image > img{
  height: 200px;
  width: 300px;
  object-fit: cover;
  border-radius: 5px;
}

.profile-upload-image {
  background-image: url(Assets/Nykaa.png);
  height: 100px;
  width: 200px;
  background-size: contain;
  border-radius: 5px;
  /* filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.1)); */
  margin-top: 5px;
  background-position: center;
  background-repeat: no-repeat;
}

.campaign-upload-image > div {
  position: absolute;
  bottom: 0;
  right: 0;
}

.hyperlink-button-primary {
  text-decoration: none;
  color: rgba(255, 255, 255, 1);
  margin: 20px;
}

.hyperlink-button-secondary {
  text-decoration: none;
  color: rgba(255, 255, 255, 0.6);
  margin-bottom: 20px;
}
/* ... */

